<resources>
    <string name="app_name">DoTooo</string>
    <string name="title_activity_task">TaskActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string-array name="colors">
        <item>Gray</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Purple</item>
        <item>Black</item>
    </string-array>
    <string name="add_task">Add Task</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_save">SAVE</string>
    <string name="create_activity_name">Create Task</string>
    <string name="description_title">DESCRIPTION</string>
    <string name="input_title_color">COLOR</string>
    <string name="input_title_date">DATE</string>
    <string name="input_title_title">TITLE</string>
    <string name="main_activity_title">DoTooo</string>
    <string name="task_description_hint">Task description</string>
    <string name="task_name_hint">New task</string>
    <string name="late_title">Late</string>
    <string name="no_tasks">No tasks</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="filter_title">Filter</string>
    <string name="completed_title">STATUS</string>
    <string name="delete_title">Delete</string>
    <string name="edit_title">Edit</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>