<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateTaskActivity">

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/input_title_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_input_task_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:hint="@string/task_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:scrollHorizontally="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/name_title"
            app:layout_constraintTop_toBottomOf="@+id/name_title" />

        <TextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/input_title_date"
            app:layout_constraintStart_toStartOf="@+id/text_input_task_name"
            app:layout_constraintTop_toBottomOf="@+id/text_input_task_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/datePickerButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="openDatePicker"
            android:text="1st January 2000"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:strokeWidth="2dp"
            app:rippleColor="#33AAAAAA"
            android:backgroundTint="@color/white"
            app:cornerRadius="5dp"
            app:strokeColor="@color/black"
            android:textColor="#AA000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_title"/>

        <TextView
            android:id="@+id/color_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/input_title_color"
            app:layout_constraintStart_toStartOf="@+id/date_title"
            app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

        <Spinner
            android:id="@+id/color_picker"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_title" />

        <TextView
            android:id="@+id/name_description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_picker" />

        <EditText
            android:id="@+id/text_input_task_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/task_description_hint"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/name_title"
            app:layout_constraintTop_toBottomOf="@+id/name_description" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/DoToooBlue"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_task_description"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_cancel"
            android:textColor="@color/DoToooBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/text_input_task_description"
            app:layout_constraintVertical_bias="1.0"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>